# YerbEngine

./: .clang-format  .gitignore  .prettierrc  CMakeLists.txt  Dockerfile  ECS_SparseSet_TODO.md  LICENSE.md  README.md  TODO.md  docker-compose.yml  format.sh  uml.mermaid
YerbEngine/: YerbEngine.hpp
YerbEngine/AssetManagement/: AudioSampleQueue.hpp  TextureManager.hpp
YerbEngine/Configuration/: Config.hpp
YerbEngine/EntityManagement/: Components.hpp  Entity.hpp
YerbEngine/GameEngine/: Action.hpp  GameEngine.hpp
YerbEngine/GameScenes/: Scene.hpp
YerbEngine/Helpers/: CollisionHelpers.hpp  EntityHelpers.hpp  MathHelpers.hpp  MovementHelpers.hpp  SpawnHelpers.hpp  TextHelpers.hpp  Vec2.hpp
YerbEngine/SystemManagement/: AudioManager.hpp  VideoManager.hpp
YerbEngine/includes/: YerbEngine.hpp
YerbEngine/includes/AssetManagement/: AudioSampleQueue.hpp  FontManager.hpp
YerbEngine/includes/Configuration/: Config.hpp  ConfigManager.hpp
YerbEngine/includes/EntityManagement/: Components.hpp  Entity.hpp  EntityManager.hpp
YerbEngine/includes/GameEngine/: Action.hpp  GameEngine.hpp
YerbEngine/includes/GameScenes/: Scene.hpp
YerbEngine/includes/Helpers/: CollisionHelpers.hpp  EntityHelpers.hpp  MathHelpers.hpp  SpawnHelpers.hpp  Vec2.hpp
YerbEngine/includes/SystemManagement/: AudioManager.hpp  VideoManager.hpp
YerbEngine/src/AssetManagement/: AudioSampleQueue.cpp  FontManager.cpp  TextureManager.cpp
YerbEngine/src/Configuration/: ConfigManager.cpp
YerbEngine/src/EntityManagement/: Entity.cpp  EntityManager.cpp
YerbEngine/src/GameEngine/: Action.cpp  GameEngine.cpp
YerbEngine/src/Helpers/: CollisionHelpers.cpp  EntityHelpers.cpp  SpawnHelpers.cpp  TextHelpers.cpp  Vec2.cpp
YerbEngine/src/SystemManagement/: AudioManager.cpp  VideoManager.cpp
config/: config.json  engine.json
demo/includes/Helpers/: MainSceneCollisionHelpers.hpp
demo/includes/HowToPlayScene/: HowToPlayScene.hpp
demo/includes/MainScene/: MainScene.hpp  MainSceneSpawner.hpp
demo/includes/MenuScene/: MenuScene.hpp
demo/includes/ScoreScene/: ScoreScene.hpp
demo/src/: main.cpp
demo/src/Helpers/: MainSceneCollisionHelpers.cpp
demo/src/HowToPlayScene/: HowToPlayScene.cpp
demo/src/MainScene/: MainScene.cpp  MainSceneSpawner.cpp
demo/src/MenuScene/: MenuScene.cpp
demo/src/ScoreScene/: ScoreScene.cpp
diagrams/: Makefile  yerbengine_architecture-sparseset.puml  yerbengine_architecture.puml
diagrams/src/: yerbengine_architecture.puml
includes/AssetManagement/: AudioSampleQueue.hpp  FontManager.hpp  TextureManager.hpp
includes/Configuration/: Config.hpp  ConfigManager.hpp
includes/EntityManagement/: Components.hpp  Entity.hpp  EntityManager.hpp
includes/GameEngine/: Action.hpp  GameEngine.hpp
includes/GameScenes/: Scene.hpp
includes/GameScenes/HowToPlayScene/: HowToPlayScene.hpp
includes/GameScenes/MainScene/: MainScene.hpp  MainSceneSpawner.hpp
includes/GameScenes/MenuScene/: MenuScene.hpp
includes/GameScenes/ScoreScene/: ScoreScene.hpp
includes/Helpers/: CollisionHelpers.hpp  EntityHelpers.hpp  MathHelpers.hpp  MovementHelpers.hpp  SpawnHelpers.hpp  TextHelpers.hpp
includes/SystemManagement/: AudioManager.hpp  VideoManager.hpp
lib/includes/: YerbEngine.hpp
lib/includes/AssetManagement/: AudioSampleBuffer.hpp  AudioSampleQueue.hpp  FontManager.hpp  TextureManager.hpp
lib/includes/Configuration/: Config.hpp  ConfigAdapter.hpp  ConfigDeprecated.hpp  ConfigDictionary.hpp  ConfigManager.hpp  ConfigManagerDeprecated.hpp  ConfigStore.hpp  ConfigTypes.hpp  IConfigProvider.hpp
lib/includes/EntityManagement/: ComponentPool.hpp  ComponentRegistry.hpp  Components.hpp  Entity.hpp  EntityManager.hpp
lib/includes/GameEngine/: Action.hpp  GameEngine.hpp
lib/includes/GameScenes/: ActionQueue.hpp  Scene.hpp  SceneContext.hpp
lib/includes/Helpers/: CollisionHelpers.hpp  EntityHelpers.hpp  MathHelpers.hpp  SpawnHelpers.hpp  TextHelpers.hpp  Vec2.hpp
lib/includes/SystemManagement/: AudioManager.hpp  VideoManager.hpp
lib/src/AssetManagement/: AudioSampleBuffer.cpp  AudioSampleQueue.cpp  FontManager.cpp  TextureManager.cpp
lib/src/Configuration/: ConfigManager.cpp  ConfigManagerDeprecated.cpp  ConfigStore.cpp  JsonConfigProvider.cpp
lib/src/EntityManagement/: Entity.cpp  EntityManager.cpp
lib/src/GameEngine/: Action.cpp  GameEngine.cpp
lib/src/Helpers/: CollisionHelpers.cpp  EntityHelpers.cpp  SpawnHelpers.cpp  TextHelpers.cpp  Vec2.cpp
shoot-demo/: CMakeLists.txt  Makefile
shoot-demo/includes/Configuration/: AudioConfig.hpp  AudioIds.hpp  DemoConfigAdapter.hpp  DemoConfigTypes.hpp
shoot-demo/includes/Helpers/: MainSceneCollisionHelpers.hpp  MovementHelpers.hpp
shoot-demo/includes/HowToPlayScene/: HowToPlayScene.hpp
shoot-demo/includes/MainScene/: MainScene.hpp  MainSceneSpawner.hpp
shoot-demo/includes/MenuScene/: MenuScene.hpp
shoot-demo/includes/ScoreScene/: ScoreScene.hpp
shoot-demo/src/: MovementHelpers.cpp  main.cpp
shoot-demo/src/Configuration/: AudioConfig.cpp
shoot-demo/src/Helpers/: MainSceneCollisionHelpers.cpp
shoot-demo/src/HowToPlayScene/: HowToPlayScene.cpp
shoot-demo/src/MainScene/: MainScene.cpp  MainSceneSpawner.cpp
shoot-demo/src/MenuScene/: MenuScene.cpp
shoot-demo/src/ScoreScene/: ScoreScene.cpp
src/: main.cpp
src/AssetManagement/: AudioSampleQueue.cpp  FontManager.cpp  TextureManager.cpp
src/Configuration/: ConfigManager.cpp
src/EntityManagement/: Entity.cpp  EntityManager.cpp
src/GameEngine/: Action.cpp  GameEngine.cpp
src/Helpers/: CollisionHelpers.cpp  EntityHelpers.cpp  MathHelpers.cpp  MovementHelpers.cpp  SpawnHelpers.cpp  TextHelpers.cpp  Vec2.cpp
src/SystemManagement/: AudioManager.cpp  VideoManager.cpp
template/: index.html  pong.html  script.js  style.css
tests/: CMakeLists.txt  Makefile  Timer.hpp  test_config_dictionary.cpp  test_config_store.cpp  test_entity_manager.cpp  test_json_config_provider.cpp  test_main.cpp  test_math_helpers.cpp  test_texture_manager.cpp  test_vec2.cpp
tests/data/: DegreesToRadians.csv  PythagoreanTriple.csv  test_config.json
(+7 files in other folders)
